--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="key" content="My Site"/>
 <meta name="viewport" content="shrink-to-fit=no, initial-scale=1.0, width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-<link rel="stylesheet" href="/public/css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="main1">
