--- a/paradox.html
+++ b/paradox.html
@@ -51,24 +51,24 @@
                 <div class="navspacemob"></div>
                 </div>
     <div class="mainparadox">
-        <div class="imagee"><img src="Slide1.JPG"></div>
-        <div class="imagee"><img src="Slide2.JPG"></div>
-        <div class="imagee"><img src="Slide3.JPG"></div>
-        <div class="imagee"><img src="Slide4.JPG"></div>
-        <div class="imagee"><img src="Slide5.JPG"></div>
-        <div class="imagee"><img src="Slide6.JPG"></div>
-        <div class="imagee"><img src="Slide7.JPG"></div>
-        <div class="imagee"><img src="Slide8.JPG"></div>
-        <div class="imagee"><img src="Slide9.JPG"></div>
-        <div class="imagee"><img src="Slide10.JPG"></div>
-        <div class="imagee"><img src="Slide11.JPG"></div>
-        <div class="imagee"><img src="Slide12.JPG"></div>
-        <div class="imagee"><img src="Slide13.JPG"></div>
-        <div class="imagee"><img src="Slide14.JPG"></div>
-        <div class="imagee"><img src="Slide15.JPG"></div>
-        <div class="imagee"><img src="Slide16.JPG"></div>
-        <div class="imagee"><img src="Slide17.JPG"></div>
-        <div class="imagee"><img src="Slide18.JPG"></div>
+        <div class="imagee"><img src="p1.JPG"></div>
+        <div class="imagee"><img src="p2.JPG"></div>
+        <div class="imagee"><img src="p3.JPG"></div>
+        <div class="imagee"><img src="p4.JPG"></div>
+        <div class="imagee"><img src="p5.JPG"></div>
+        <div class="imagee"><img src="p6.JPG"></div>
+        <div class="imagee"><img src="p7.JPG"></div>
+        <div class="imagee"><img src="p8.JPG"></div>
+        <div class="imagee"><img src="p9.JPG"></div>
+        <div class="imagee"><img src="p10.JPG"></div>
+        <div class="imagee"><img src="p11.JPG"></div>
+        <div class="imagee"><img src="p12.JPG"></div>
+        <div class="imagee"><img src="p13.JPG"></div>
+        <div class="imagee"><img src="p14.JPG"></div>
+        <div class="imagee"><img src="p15.JPG"></div>
+        <div class="imagee"><img src="p16.JPG"></div>
+        <div class="imagee"><img src="p17.JPG"></div>
+        <div class="imagee"><img src="p18.JPG"></div>
         
 
     </div>
