--- a/leben.html
+++ b/leben.html
@@ -5,14 +5,14 @@
     <meta name="key" content="My Site"/>
 <meta name="viewport" content="shrink-to-fit=no, initial-scale=1.0, width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-<link rel="stylesheet" href="/public/css/leben.css">
+<link rel="stylesheet" href="leben.css">
 </head>
 <body>
 <div class="main1">
     <div class="navigation">
             <a href="indexproj.html">
         <div class="logo">
-                <img src="/public/images/logo.jpg">
+                <img src="logo.jpg">
         </div>
                 </a>
         <div class="empty1"></div>  
@@ -35,12 +35,12 @@
             
     </div>
     <div class="mobilenav">
-        <div class="logomob"><a href="index.html"><img src="/public/images/logo.jpg"></a></div>
+        <div class="logomob"><a href="index.html"><img src="logo.jpg"></a></div>
                
                 <div class="hamburger">
                 <ul>
                         <li>
-                        <a href="#"><img src="/public/images/hamburger.png"></a>
+                        <a href="#"><img src="hamburger.png"></a>
                                           <ul>
                                             <li><a href="indexproj.html">Projects</a></li>
                                             <li><a href="index.html">Blog</a></li>
@@ -52,14 +52,14 @@
                 <div class="navspacemob"></div>
                 </div>
     <div class="mainleben">
-        <div class="imagee"><img src="/public/images/lebenproj/Slide2.JPG"></div>
-        <div class="imagee"><img src="/public/images/lebenproj/Slide3.JPG"></div>
-        <div class="imagee"><img src="/public/images/lebenproj/Slide4.JPG"></div>
-        <div class="imagee"><img src="/public/images/lebenproj/Slide5.JPG"></div>
-        <div class="imagee"><img src="/public/images/lebenproj/Slide6.JPG"></div>
-        <div class="imagee"><img src="/public/images/lebenproj/Slide7.JPG"></div>
-        <div class="imagee"><img src="/public/images/lebenproj/Slide8.JPG"></div>
-        <div class="imagee"><img src="/public/images/lebenproj/Slide9.JPG"></div>
+        <div class="imagee"><img src="l1.JPG"></div>
+        <div class="imagee"><img src="l2.JPG"></div>
+        <div class="imagee"><img src="l3.JPG"></div>
+        <div class="imagee"><img src="l4.JPG"></div>
+        <div class="imagee"><img src="l5.JPG"></div>
+        <div class="imagee"><img src="l6.JPG"></div>
+        <div class="imagee"><img src="l7.JPG"></div>
+        <div class="imagee"><img src="l8.JPG"></div>
     </div>
 
     </div>
